# Stepik_AQA

./: .gitignore  README.md  conftest.py  exampl.py  habr.py  lesson1.6_step10-11.py  lesson1.6_step10_rev.py  lesson1.6_step11_rev.py  lesson1.6_step4.py  lesson1.6_step7.py  lesson2.2_step8.py  lesson2.4_step7-1.py  lesson2.4_step8.py  m1_l6_s11.py  pyproject.toml  pytest.ini  test2.py
.github/workflows/: python-app.yml
Lessons/: lesson1.6_step5.py  lesson1.6_step8.py  lesson2.1_step5.py  lesson2.2_step3.py  lesson2.2_step6.py  lesson2.2_step8.py  lesson2.3_step4.py  lesson2.3_step5.py  lesson2.3_step6.py
Tests/: test_fixture5.py  test_fixture7-2.py  test_fixture7.py  test_fixture_autouse.py  test_les33_step3.py
Tests/api/: test_weather_api.py
Tests/stepik/: conftest.py  test_1.py  test_36_4.py  test_fixture3.py
Tests/ui/: conftest.py  pretty_print.py  test_2.py  test_35_2.py  test_36_4.py  test_fixture7-2.py  test_les32_step13.py
les-s/: les16_step11_rev.py  les21_step7.py  les24_step3.py  les24_step7-2.py
test/api/: test_sample.tavern.yaml
test/ui/: test_36_5.py  test_fixture7.py
